--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,4 @@
 {
-  "presets": ["@babel/preset-react"]
+  "presets": ["@babel/env", "@babel/react", "@babel/preset-typescript"],
+  "plugins": []
 }
