Test Github signin

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,15 +15,16 @@
     "isolatedModules": true,
     "noEmit": false,
     "jsx": "react-jsx",
-    "baseUrl": "src",
+    "baseUrl": ".",
     "paths": {
-      "components/*": ["./components/*"],
-      "assets/*": ["./assets/*"],
-      "hooks/*": ["./hooks/*"],
-      "services/*": ["./services/*"],
-      "store/*": ["./store/*"],
-      "state/*": ["./state/*"],
-      "models/*": ["./models*/"]
+      "components/*": ["./src/components/*"],
+      "assets/*": ["./src/assets/*"],
+      "hooks/*": ["./src/hooks/*"],
+      "services/*": ["./src/services/*"],
+      "store/*": ["./src/store/*"],
+      "state/*": ["./src/state/*"],
+      "models/*": ["./src/models/*"],
+      "extension/*": ["./src/extension/*"]
     }
   },
   "include": ["src/**/*", "tests/**/*"]
