--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "zip-webpack-plugin": "^3.0.0"
   },
   "dependencies": {
+    "@types/chrome": "0.0.155",
     "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
