--- a/src/extension/manifest.json
+++ b/src/extension/manifest.json
@@ -8,8 +8,13 @@
     "96": "img/icon/icon96.png",
     "128": "img/icon/icon128.png"
   },
-  "permissions": ["tabs", "storage", "https://*.github.com/"],
-  "host_permissions": ["https://*.github.com/"],
+  "permissions": [
+    "tabs",
+    "storage",
+    "https://*.github.com/",
+    "https://github.com/"
+  ],
+  "host_permissions": ["https://*.github.com/", "https://github.com/"],
   "browser_action": {
     "default_popup": "index.html",
     "default_icon": "img/icon/icon.png"
